@@ -1,3 +1,10 @@
+2001-09-20  Mikael Djurfeldt  <mdj@linnaeus>
+
+	* num2integral.i.c (NUM2INTEGRAL): Report an error when these
+	routines are passed an inexact.  This change in behavior is
+	motivated by concordance with R5RS: It is more common that a
+	primitive doesn't want to accept an inexact for an exact.
+
 2001-09-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
         The following patch partially undoes my patch from 2001-06-30,
